--- a/styles.scss
+++ b/styles.scss
@@ -14,8 +14,11 @@ $btnBackground: #001845;
 #fp-nav ul li a span {
   background-color: $color !important;
 }
+.titleBr {
+  display: none;
+}
 body {
-  width: 100%;
+  width: 100vw;
   background-attachment: fixed;
   background-color: $background;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236fabf0' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
@@ -30,7 +33,7 @@ body::-webkit-scrollbar-thumb {
 
 section {
   width: 100%;
-  height: 100vh;
+
   color: $color;
 }
 
@@ -245,14 +248,29 @@ section {
 #intro {
   .fp-tableCell:nth-child(1) {
     display: grid;
-    grid-template-rows: repeat(3, 33.3%);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 100%;
+  }
+  #dummy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    #pictureDummy {
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      background-color: $navText;
+      border-radius: 125px;
+      opacity: 0;
+    }
   }
   #presentation {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     #description {
       position: absolute;
       left: -750px;
@@ -276,7 +294,7 @@ section {
     #picture {
       position: absolute;
       width: 250px;
-      min-height: 250px;
+      height: 250px;
       background-color: $navText;
       border-radius: 125px;
     }
@@ -414,6 +432,7 @@ section {
   }
 }
 #projectsSection {
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -430,7 +449,7 @@ section {
       text-shadow: 4px 2px 0px $navText;
       color: $color;
       filter: brightness(110%);
-      margin-bottom: 150px;
+      margin-bottom: 100px;
     }
     #cards {
       display: grid;
@@ -458,17 +477,16 @@ section {
           backface-visibility: hidden;
           transition: 1s ease-in-out;
           border-radius: 20px;
-          
         }
         .front {
           background-color: $background;
-          img{
+          img {
             border-top-right-radius: 20px;
             border-top-left-radius: 20px;
             width: 100%;
             height: 200px;
           }
-          h3{
+          h3 {
             height: 70px;
             font-size: 50px;
             color: $color;
@@ -492,7 +510,6 @@ section {
 #skillsSection {
   #skillsContent {
     width: 70%;
-    height: 60%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -507,34 +524,29 @@ section {
       margin-bottom: 60px;
     }
     .skills {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: row;
-      .skill{
-        margin: 0 20px;
-      }
+      display: grid;
+      grid-template-columns: 150px 150px 150px 200px 150px 150px;
+      grid-template-rows: 150px;
+      gap: 20px;
     }
-    h3{
+    h3 {
       margin: 50px 0 30px;
       font-family: $tittleFont;
       font-size: 55px;
       text-shadow: 2px 2px 0px $navText;
       color: $color;
       filter: brightness(110%);
-      
     }
-    .interestedIn{
+    .interestedIn {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      .interests{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        .interest{
+      .interests {
+        display: grid;
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: 150px;
+        .interest {
           margin: 0 20px;
         }
       }
@@ -542,59 +554,192 @@ section {
   }
 }
 #contactSection {
-  .fp-tableCell {
-    #contactContent {
-      width: 50%;
-      height: 60%;
-      margin: auto;
+  width: 100%;
+  height: auto;
+  #contactContent {
+    width: 50%;
+    height: 600px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #023d7d42;
+    backdrop-filter: blur(1px);
+    border-radius: 20px;
+    .sectionTitle {
+      font-family: $tittleFont;
+      font-size: 60px;
+      text-shadow: 4px 2px 0px $navText;
+      color: $color;
+      filter: brightness(110%);
+      margin-bottom: 60px;
+    }
+    #contactForm {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      background-color: #023d7d42;
-      backdrop-filter: blur(1px);
-      border-radius: 20px;
-      .sectionTitle {
-        font-family: $tittleFont;
-        font-size: 60px;
-        text-shadow: 4px 2px 0px $navText;
-        color: $color;
-        filter: brightness(110%);
-        margin-bottom: 60px;
+      width: 100%;
+
+      input,
+      textarea,
+      button {
+        width: 80%;
+        margin-bottom: 20px;
+        padding: 7px;
+        box-sizing: border-box;
+        font-size: 25px;
       }
-      #contactForm {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      textarea {
+        max-width: 80%;
+        min-width: 80%;
+        max-height: 250px;
+        min-height: 100px;
+      }
+      #submit {
+        cursor: pointer;
+        background-color: $color;
+        color: $background;
+        border: none;
+      }
+      #submit:hover {
+        box-shadow: 0px 0px 30px $color;
+        filter: brightness(130%);
+      }
+    }
+  }
+}
+@media screen and (max-width: 1450px) {
+  #projectsSection {
+    #projectsContent {
+      .sectionTitle {
+        margin-bottom: 20px;
+      }
+      #cards {
+        grid-template-columns: repeat(2, 320px);
+        grid-template-rows: repeat(2, 270px);
+        gap: 50px 100px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  #buttons {
+    display: none;
+  }
+  #intro {
+    .fp-tableCell:nth-child(1) {
+      display: grid;
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: 100%;
+    }
+    #dummy {
+      #pictureDummy {
+        opacity: 1;
+      }
+    }
+    #presentation {
+      position: unset;
+      #description {
+        position: unset;
+        left: unset;
+        h1 {
+          font-size: 80px;
+        }
+        h2 {
+          font-size: 55px;
+        }
+      }
+      #picture {
+        display: none;
+      }
+    }
+    #navBar {
+      display: none;
+    }
+  }
+  #aboutSection {
+    #aboutContent {
+      height: unset;
+      .aboutMe {
         flex-direction: column;
         width: 100%;
-
-        input,
-        textarea,
-        button {
-          width: 80%;
-          margin-bottom: 20px;
-          padding: 7px;
-          box-sizing: border-box;
-          font-size: 25px;
-        }
-        textarea {
-          max-width: 80%;
-          min-width: 80%;
-          max-height: 250px;
-          min-height: 100px;
-        }
-        #submit {
-          cursor: pointer;
-          background-color: $color;
-          color: $background;
-          border: none;
-        }
-        #submit:hover {
-          box-shadow: 0px 0px 30px $color;
-          filter: brightness(130%);
+        height: unset;
+        padding: 15px;
+        box-sizing: border-box;
+        p {
+          width: 100%;
         }
       }
+    }
+  }
+  #skillsSection {
+    #skillsContent {
+      .skills {
+        grid-template-columns: 200px 150px 150px;
+        grid-template-rows: 150px 150px;
+      }
+    }
+  }
+  #projectsSection {
+    #projectsContent {
+      #cards {
+        gap: 50px 50px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 480px) {
+  .titleBr {
+    display: unset;
+  }
+  #intro {
+    #presentation {
+      padding-bottom: 200px;
+      #description {
+        h1 {
+          text-align: center;
+          font-size: 70px;
+        }
+        h2 {
+          font-size: 45px;
+        }
+      }
+    }
+  }
+  #skillsSection {
+    #skillsContent {
+      .skills {
+        grid-template-columns: 150px 150px;
+        grid-template-rows: 150px 150px 150px;
+      }
+      h3 {
+        text-align: center;
+      }
+      .interestedIn {
+        .interests {
+          grid-template-columns: repeat(2, 150px);
+          grid-template-rows: 150px 150px;
+        }
+      }
+    }
+  }
+  #projectsSection {
+    
+    #projectsContent {
+      height: unset;
+      #cards {
+        grid-template-columns: 320px;
+        grid-template-rows: repeat(4, 270px);
+      }
+    }
+  }
+  #contactSection {
+    #contactContent {
+      width: 90%;
+      
+      
     }
   }
 }
