--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,9 @@ body::-webkit-scrollbar {
   width: 0px;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: #0466c8;
-  border-radius: 3.5px;
-}
-
 section {
   width: 100%;
+  overflow-x: hidden;
   color: #0466c8;
 }
 
@@ -46,7 +42,7 @@ section {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 80px;
+  height: 50px;
   z-index: 1;
 }
 
@@ -66,8 +62,8 @@ section {
 }
 
 #buttons #idioms .idiom {
-  width: 60px;
-  height: 33px;
+  width: 50px;
+  height: 30px;
   margin: 15px;
   font-size: 20px;
   background-color: #0466c8;
@@ -88,7 +84,7 @@ section {
 
 #buttons #idioms .idiom .flags {
   width: 100%;
-  height: 50px;
+  height: 40px;
 }
 
 #buttons #idioms .idiom::after:hover {
@@ -110,9 +106,9 @@ section {
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
-  top: 10px;
-  width: 60%;
-  left: 20%;
+  top: 5px;
+  width: 45%;
+  left: 27%;
   display: none;
 }
 
@@ -130,11 +126,11 @@ section {
       -ms-flex-direction: row;
           flex-direction: row;
   list-style: none;
-  width: 70%;
+  width: 20%;
 }
 
 #buttons #navBarTop #navBarTopList .navBarItem {
-  font-size: 40px;
+  font-size: 30px;
   width: 100%;
   text-align: center;
 }
@@ -142,8 +138,9 @@ section {
 #buttons #navBarTop #navBarTopList a {
   color: #0466c8 !important;
   position: relative;
-  padding: 5px 25px;
-  width: 100px;
+  padding: 2px 5px;
+  margin: 0 20px;
+  width: 100%;
   text-decoration: none;
   overflow: hidden;
   -webkit-transition: 0.2s;
@@ -243,9 +240,8 @@ section {
 }
 
 #buttons .cv {
-  width: 200px;
   position: fixed;
-  right: 45px;
+  right: 30px;
 }
 
 #buttons .cv #cv {
@@ -255,7 +251,7 @@ section {
           box-shadow: 0px 0px 10px #0466c8;
   margin: 15px;
   height: 35px;
-  font-size: 35px;
+  font-size: 25px;
   text-decoration: none;
   color: #001233;
   padding: 0 15px;
@@ -351,10 +347,10 @@ section {
 
 #intro #dummy #pictureDummy {
   position: absolute;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   background-color: #6fabf0;
-  border-radius: 125px;
+  border-radius: 100px;
   opacity: 0;
 }
 
@@ -377,7 +373,7 @@ section {
 
 #intro #presentation #description {
   position: absolute;
-  left: -750px;
+  left: -595px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -395,7 +391,7 @@ section {
 
 #intro #presentation #description h1 {
   font-family: "Fugaz One", cursive;
-  font-size: 100px;
+  font-size: 80px;
   text-shadow: 4px 2px 0px #6fabf0;
   color: #0466c8;
   -webkit-filter: brightness(110%);
@@ -409,10 +405,10 @@ section {
 
 #intro #presentation #picture {
   position: absolute;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   background-color: #6fabf0;
-  border-radius: 125px;
+  border-radius: 100px;
 }
 
 #intro #navBar {
@@ -593,8 +589,8 @@ section {
 }
 
 #aboutSection #aboutContent .aboutMe {
-  width: 80%;
-  height: 60%;
+  width: 1200px;
+  height: 550px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -607,10 +603,39 @@ section {
           flex-direction: row;
 }
 
-#aboutSection #aboutContent .aboutMe p {
+#aboutSection #aboutContent .aboutMe .text {
   width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#aboutSection #aboutContent .aboutMe .text p {
+  text-align: justify;
+  width: 100%;
   font-size: 30px;
   color: #6fabf0;
+}
+
+#aboutSection #aboutContent .aboutMe .ilustrationContainer {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #projectsSection {
@@ -657,10 +682,10 @@ section {
 #projectsSection #projectsContent #cards {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (320px)[4];
-      grid-template-columns: repeat(4, 320px);
-  -ms-grid-rows: 270px;
-      grid-template-rows: 270px;
+  -ms-grid-columns: (280px)[4];
+      grid-template-columns: repeat(4, 280px);
+  -ms-grid-rows: 200px;
+      grid-template-rows: 200px;
   gap: 30px;
 }
 
@@ -709,12 +734,12 @@ section {
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
   width: 100%;
-  height: 200px;
+  height: 165px;
 }
 
 #projectsSection #projectsContent #cards .card .front h3 {
-  height: 70px;
-  font-size: 50px;
+  height: 30px;
+  font-size: 30px;
   color: #0466c8;
 }
 
@@ -766,10 +791,10 @@ section {
 #skillsSection #skillsContent .skills {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 150px 150px 150px 200px 150px 150px;
-      grid-template-columns: 150px 150px 150px 200px 150px 150px;
-  -ms-grid-rows: 150px;
-      grid-template-rows: 150px;
+  -ms-grid-columns: 125px 125px 125px 150px 125px 125px;
+      grid-template-columns: 125px 125px 125px 150px 125px 125px;
+  -ms-grid-rows: 125px;
+      grid-template-rows: 125px;
   gap: 20px;
 }
 
@@ -802,14 +827,23 @@ section {
 #skillsSection #skillsContent .interestedIn .interests {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (150px)[3];
-      grid-template-columns: repeat(3, 150px);
+  -ms-grid-columns: (125px)[3];
+      grid-template-columns: repeat(3, 125px);
   -ms-grid-rows: 150px;
       grid-template-rows: 150px;
 }
 
 #skillsSection #skillsContent .interestedIn .interests .interest {
   margin: 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #contactSection {
@@ -899,15 +933,30 @@ section {
           filter: brightness(130%);
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1350px) {
+  #aboutSection #aboutContent .aboutMe {
+    width: 1000px;
+  }
+  #aboutSection #aboutContent .aboutMe .text {
+    width: 50%;
+    padding-left: 15px;
+  }
+  #aboutSection #aboutContent .aboutMe .ilustrationContainer {
+    width: 50%;
+  }
+  #aboutSection #aboutContent .aboutMe .ilustrationContainer .ilustration {
+    padding-left: 20px;
+    width: 500px;
+    height: 450px;
+  }
   #projectsSection #projectsContent .sectionTitle {
     margin-bottom: 20px;
   }
   #projectsSection #projectsContent #cards {
-    -ms-grid-columns: (320px)[2];
-        grid-template-columns: repeat(2, 320px);
-    -ms-grid-rows: (270px)[2];
-        grid-template-rows: repeat(2, 270px);
+    -ms-grid-columns: (280px)[2];
+        grid-template-columns: repeat(2, 280px);
+    -ms-grid-rows: (200px)[2];
+        grid-template-rows: repeat(2, 200px);
     gap: 50px 100px;
   }
 }
@@ -956,12 +1005,19 @@ section {
             flex-direction: column;
     width: 100%;
     height: unset;
+    height: unset;
     padding: 15px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
   }
-  #aboutSection #aboutContent .aboutMe p {
+  #aboutSection #aboutContent .aboutMe .text {
     width: 100%;
+    padding: 0 20px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  #aboutSection #aboutContent .aboutMe .ilustrationContainer .ilustration {
+    height: 400px;
   }
   #skillsSection #skillsContent .skills {
     -ms-grid-columns: 200px 150px 150px;
@@ -969,8 +1025,15 @@ section {
     -ms-grid-rows: 150px 150px;
         grid-template-rows: 150px 150px;
   }
+  #skillsSection #skillsContent .interestedIn h3 {
+    margin: 5px 0;
+  }
   #projectsSection #projectsContent #cards {
     gap: 50px 50px;
+  }
+  #contactSection #contactContent {
+    width: 90%;
+    margin: 80px auto 30px;
   }
 }
 
@@ -979,7 +1042,7 @@ section {
     display: unset;
   }
   #intro #presentation {
-    padding-bottom: 200px;
+    padding-bottom: 80px;
   }
   #intro #presentation #description h1 {
     text-align: center;
@@ -988,32 +1051,36 @@ section {
   #intro #presentation #description h2 {
     font-size: 45px;
   }
-  #skillsSection #skillsContent .skills {
-    -ms-grid-columns: 150px 150px;
-        grid-template-columns: 150px 150px;
-    -ms-grid-rows: 150px 150px 150px;
-        grid-template-rows: 150px 150px 150px;
+  #skillsSection #skillsContent .sectionTitle {
+    padding-top: 80px;
+    font-size: 60px;
   }
-  #skillsSection #skillsContent h3 {
-    text-align: center;
+  #skillsSection #skillsContent .skills {
+    -ms-grid-columns: 125px 125px;
+        grid-template-columns: 125px 125px;
+    -ms-grid-rows: 125px 125px 125px;
+        grid-template-rows: 125px 125px 125px;
+  }
+  #skillsSection #skillsContent .interestedIn h3 {
+    margin-top: 30px;
   }
   #skillsSection #skillsContent .interestedIn .interests {
-    -ms-grid-columns: (150px)[2];
-        grid-template-columns: repeat(2, 150px);
-    -ms-grid-rows: 150px 150px;
-        grid-template-rows: 150px 150px;
+    -ms-grid-columns: (125px)[2];
+        grid-template-columns: repeat(2, 125px);
+    -ms-grid-rows: 125px 125px;
+        grid-template-rows: 125px 125px;
   }
   #projectsSection #projectsContent {
     height: unset;
   }
-  #projectsSection #projectsContent #cards {
-    -ms-grid-columns: 320px;
-        grid-template-columns: 320px;
-    -ms-grid-rows: (270px)[4];
-        grid-template-rows: repeat(4, 270px);
+  #projectsSection #projectsContent .sectionTitle {
+    padding-top: 80px;
   }
-  #contactSection #contactContent {
-    width: 90%;
+  #projectsSection #projectsContent #cards {
+    -ms-grid-columns: 280px;
+        grid-template-columns: 280px;
+    -ms-grid-rows: (200px)[4];
+        grid-template-rows: repeat(4, 200px);
   }
 }
 /*# sourceMappingURL=styles.css.map */
