--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@ $btnBackground: #001845;
   margin: 0px;
   padding: 0px;
   font-family: $textFont;
+  
 }
 #fp-nav ul li a span {
   background-color: $color !important;
@@ -22,18 +23,16 @@ body {
   background-attachment: fixed;
   background-color: $background;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236fabf0' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  
 }
 body::-webkit-scrollbar {
   width: 0px;
 }
-body::-webkit-scrollbar-thumb {
-  background-color: $color;
-  border-radius: 3.5px;
-}
+
 
 section {
   width: 100%;
-
+  overflow-x: hidden;
   color: $color;
 }
 
@@ -43,7 +42,7 @@ section {
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: 80px;
+  height: 50px;
   z-index: 1;
   #idioms {
     left: 40px;
@@ -52,8 +51,8 @@ section {
     justify-content: center;
     flex-direction: row;
     .idiom {
-      width: 60px;
-      height: 33px;
+      width: 50px;
+      height: 30px;
       margin: 15px;
       font-size: 20px;
       background-color: $color;
@@ -65,7 +64,7 @@ section {
       cursor: pointer;
       .flags {
         width: 100%;
-        height: 50px;
+        height: 40px;
       }
     }
 
@@ -82,9 +81,9 @@ section {
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 10px;
-    width: 60%;
-    left: 20%;
+    top: 5px;
+    width: 45%;
+    left: 27%;
     display: none;
     #navBarTopList {
       display: flex;
@@ -92,17 +91,18 @@ section {
       align-items: center;
       flex-direction: row;
       list-style: none;
-      width: 70%;
+      width: 20%;
       .navBarItem {
-        font-size: 40px;
+        font-size: 30px;
         width: 100%;
         text-align: center;
       }
       a {
         color: $color !important;
         position: relative;
-        padding: 5px 25px;
-        width: 100px;
+        padding: 2px 5px;
+        margin: 0 20px;
+        width: 100%;
         text-decoration: none;
         overflow: hidden;
         transition: 0.2s;
@@ -182,9 +182,8 @@ section {
   }
 
   .cv {
-    width: 200px;
     position: fixed;
-    right: 45px;
+    right: 30px;
 
     #cv {
       border-radius: 50px;
@@ -193,7 +192,7 @@ section {
 
       margin: 15px;
       height: 35px;
-      font-size: 35px;
+      font-size: 25px;
       text-decoration: none;
       color: $background;
 
@@ -258,10 +257,10 @@ section {
 
     #pictureDummy {
       position: absolute;
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 200px;
       background-color: $navText;
-      border-radius: 125px;
+      border-radius: 100px;
       opacity: 0;
     }
   }
@@ -273,14 +272,14 @@ section {
     flex-direction: column;
     #description {
       position: absolute;
-      left: -750px;
+      left: -595px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       h1 {
         font-family: $tittleFont;
-        font-size: 100px;
+        font-size: 80px;
         text-shadow: 4px 2px 0px $navText;
         color: $color;
         filter: brightness(110%);
@@ -293,10 +292,10 @@ section {
 
     #picture {
       position: absolute;
-      width: 250px;
-      height: 250px;
+      width: 200px;
+      height: 200px;
       background-color: $navText;
-      border-radius: 125px;
+      border-radius: 100px;
     }
   }
   #navBar {
@@ -418,15 +417,30 @@ section {
       filter: brightness(110%);
     }
     .aboutMe {
-      width: 80%;
-      height: 60%;
+      width: 1200px;
+      height: 550px;
       display: flex;
       align-items: center;
       flex-direction: row;
-      p {
+      .text{
         width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p {
+        text-align: justify;
+        width: 100%;
         font-size: 30px;
         color: $navText;
+        }
+      }
+      .ilustrationContainer{
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
@@ -453,8 +467,8 @@ section {
     }
     #cards {
       display: grid;
-      grid-template-columns: repeat(4, 320px);
-      grid-template-rows: 270px;
+      grid-template-columns: repeat(4, 280px);
+      grid-template-rows: 200px;
       gap: 30px;
 
       .card {
@@ -484,11 +498,11 @@ section {
             border-top-right-radius: 20px;
             border-top-left-radius: 20px;
             width: 100%;
-            height: 200px;
+            height: 165px;
           }
           h3 {
-            height: 70px;
-            font-size: 50px;
+            height: 30px;
+            font-size: 30px;
             color: $color;
           }
         }
@@ -525,8 +539,8 @@ section {
     }
     .skills {
       display: grid;
-      grid-template-columns: 150px 150px 150px 200px 150px 150px;
-      grid-template-rows: 150px;
+      grid-template-columns: 125px 125px 125px 150px 125px 125px;
+      grid-template-rows: 125px;
       gap: 20px;
     }
     h3 {
@@ -544,10 +558,13 @@ section {
       flex-direction: column;
       .interests {
         display: grid;
-        grid-template-columns: repeat(3, 150px);
+        grid-template-columns: repeat(3, 125px);
         grid-template-rows: 150px;
         .interest {
           margin: 0 20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
     }
@@ -610,15 +627,35 @@ section {
     }
   }
 }
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1350px) {
+  #aboutSection{
+    #aboutContent{
+      .aboutMe{
+        width: 1000px;
+        .text{
+          width: 50%;
+          padding-left: 15px;
+        }
+        .ilustrationContainer{
+          width: 50%;
+          .ilustration{
+
+            padding-left: 20px;
+            width: 500px;
+            height: 450px;
+          }
+        }
+      }
+    }
+  }
   #projectsSection {
     #projectsContent {
       .sectionTitle {
         margin-bottom: 20px;
       }
       #cards {
-        grid-template-columns: repeat(2, 320px);
-        grid-template-rows: repeat(2, 270px);
+        grid-template-columns: repeat(2, 280px);
+        grid-template-rows: repeat(2, 200px);
         gap: 50px 100px;
       }
     }
@@ -666,19 +703,33 @@ section {
         flex-direction: column;
         width: 100%;
         height: unset;
+        height: unset;
         padding: 15px;
         box-sizing: border-box;
-        p {
+        .text{
           width: 100%;
+          padding: 0 20px;
+          box-sizing: border-box;
+        }
+        .ilustrationContainer{
+          .ilustration{
+            height: 400px;
+          }
         }
       }
     }
   }
   #skillsSection {
     #skillsContent {
+      
       .skills {
         grid-template-columns: 200px 150px 150px;
         grid-template-rows: 150px 150px;
+      }
+      .interestedIn{
+        h3{
+          margin: 5px 0;
+        }
       }
     }
   }
@@ -689,6 +740,13 @@ section {
       }
     }
   }
+  #contactSection {
+    #contactContent {
+      width: 90%;
+      margin: 80px auto 30px;
+      
+    }
+  }
 }
 @media screen and (max-width: 480px) {
   .titleBr {
@@ -696,7 +754,7 @@ section {
   }
   #intro {
     #presentation {
-      padding-bottom: 200px;
+      padding-bottom: 80px;
       #description {
         h1 {
           text-align: center;
@@ -710,17 +768,23 @@ section {
   }
   #skillsSection {
     #skillsContent {
+      .sectionTitle{
+        padding-top: 80px;
+        font-size: 60px;
+      }
       .skills {
-        grid-template-columns: 150px 150px;
-        grid-template-rows: 150px 150px 150px;
+        grid-template-columns: 125px 125px;
+        grid-template-rows: 125px 125px 125px;
       }
-      h3 {
-        text-align: center;
-      }
+      
       .interestedIn {
+        h3{
+          margin-top: 30px;
+        }
         .interests {
-          grid-template-columns: repeat(2, 150px);
-          grid-template-rows: 150px 150px;
+          grid-template-columns: repeat(2, 125px);
+          grid-template-rows: 125px 125px;
+
         }
       }
     }
@@ -729,17 +793,14 @@ section {
     
     #projectsContent {
       height: unset;
+      .sectionTitle{
+        padding-top: 80px;
+      }
       #cards {
-        grid-template-columns: 320px;
-        grid-template-rows: repeat(4, 270px);
+        grid-template-columns: 280px;
+        grid-template-rows: repeat(4, 200px);
       }
     }
   }
-  #contactSection {
-    #contactContent {
-      width: 90%;
-      
-      
-    }
-  }
+  
 }
