--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,138 @@ section {
   color: #0466c8;
 }
 
+#menu {
+  width: 45px;
+  height: 45px;
+  background-color: #0466c8;
+  border-radius: 22.5px;
+  position: fixed;
+  display: none;
+  top: 10px;
+  left: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 0px 20px #0466c8;
+          box-shadow: 0px 0px 20px #0466c8;
+  cursor: pointer;
+  z-index: 101;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#menu .line {
+  width: 25px;
+  height: 5px;
+  background-attachment: fixed;
+  background-color: #001233;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236fabf0' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  margin: 2px;
+  border-radius: 2.5px;
+  cursor: pointer;
+}
+
+#menu:hover {
+  -webkit-box-shadow: 0px 0px 20px #0466c8;
+          box-shadow: 0px 0px 20px #0466c8;
+  -webkit-filter: brightness(120%);
+          filter: brightness(120%);
+  cursor: pointer;
+}
+
+#checkBox {
+  display: none;
+}
+
+#navResponsive {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 100;
+  background-color: #001233;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+#navResponsive li {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #0466c8;
+  cursor: pointer;
+}
+
+#navResponsive li a {
+  width: 100%;
+  font-size: 40px;
+  margin: 10px;
+  text-decoration: none;
+  color: inherit;
+}
+
+#navResponsive li #cvResponsive {
+  background-color: #0466c8;
+  color: #001233;
+  border-radius: 35px;
+}
+
+#navResponsive li #cvResponsive:hover {
+  background-color: #0466c8;
+  -webkit-box-shadow: 0px 0px 30px #0466c8;
+          box-shadow: 0px 0px 30px #0466c8;
+  -webkit-filter: brightness(130%);
+          filter: brightness(130%);
+}
+
+#navResponsive .liResponsive :hover {
+  background-color: #0466c8;
+  color: #001845;
+  border-radius: 35px;
+  background-color: #0466c8;
+  -webkit-box-shadow: 0px 0px 30px #0466c8;
+          box-shadow: 0px 0px 30px #0466c8;
+  -webkit-filter: brightness(130%);
+          filter: brightness(130%);
+}
+
+#navResponsive .liResponsive:active {
+  background-color: #0466c8;
+  color: #001845;
+  border-radius: 35px;
+  background-color: #0466c8;
+  -webkit-box-shadow: 0px 0px 30px #0466c8;
+          box-shadow: 0px 0px 30px #0466c8;
+  -webkit-filter: brightness(130%);
+          filter: brightness(130%);
+}
+
 #buttons {
+  background-attachment: fixed;
+  background-color: #001233;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236fabf0' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -69,7 +200,6 @@ section {
   background-color: #0466c8;
   -webkit-box-shadow: 0px 0px 10px #6fabf0;
           box-shadow: 0px 0px 10px #6fabf0;
-  color: #0466c8;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,8 +224,8 @@ section {
 #buttons #idioms .idiom:hover {
   -webkit-box-shadow: 0px 0px 30px #0466c8;
           box-shadow: 0px 0px 30px #0466c8;
-  -webkit-filter: brightness(130%);
-          filter: brightness(130%);
+  -webkit-filter: brightness(110%);
+          filter: brightness(110%);
 }
 
 #buttons #navBarTop {
@@ -107,8 +237,8 @@ section {
           align-items: center;
   position: fixed;
   top: 5px;
-  width: 45%;
-  left: 27%;
+  width: 65%;
+  left: 14%;
   display: none;
 }
 
@@ -136,10 +266,10 @@ section {
 }
 
 #buttons #navBarTop #navBarTopList a {
-  color: #0466c8 !important;
+  color: #0466c8;
   position: relative;
   padding: 2px 5px;
-  margin: 0 20px;
+  margin: 0 30px;
   width: 100%;
   text-decoration: none;
   overflow: hidden;
@@ -220,7 +350,7 @@ section {
 }
 
 #buttons #navBarTop #navBarTopList a:visited {
-  color: #6fabf0;
+  color: #0466c8;
 }
 
 #buttons #navBarTop #navBarTopList a:hover {
@@ -265,65 +395,6 @@ section {
           filter: brightness(130%);
 }
 
-#buttons #menu {
-  width: 80px;
-  height: 80px;
-  background-color: #0466c8;
-  border-radius: 40px;
-  position: fixed;
-  bottom: 60px;
-  right: 120px;
-  display: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0px 0px 20px #0466c8;
-          box-shadow: 0px 0px 20px #0466c8;
-  cursor: pointer;
-}
-
-#buttons #menu #navToggle {
-  position: absolute;
-  display: none;
-}
-
-#buttons #menu #navIcon {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#buttons #menu #navIcon .line {
-  width: 40px;
-  height: 7px;
-  background-color: #001233;
-  margin: 3px;
-  border-radius: 3px;
-}
-
-#buttons #menu:hover {
-  -webkit-box-shadow: 0px 0px 20px #0466c8;
-          box-shadow: 0px 0px 20px #0466c8;
-  -webkit-filter: brightness(120%);
-          filter: brightness(120%);
-  cursor: pointer;
-}
-
 #intro .fp-tableCell:nth-child(1) {
   display: -ms-grid;
   display: grid;
@@ -352,6 +423,14 @@ section {
   background-color: #6fabf0;
   border-radius: 100px;
   opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
 }
 
 #intro #presentation {
@@ -405,10 +484,20 @@ section {
 
 #intro #presentation #picture {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 215px;
+  height: 215px;
   background-color: #6fabf0;
-  border-radius: 100px;
+  border-radius: 105.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
 }
 
 #intro #navBar {
@@ -441,8 +530,7 @@ section {
 }
 
 #intro #navBar #navBarList .navBarItem {
-  font-size: 40px;
-  width: 100%;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -559,6 +647,7 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow: hidden;
 }
 
 #aboutSection #aboutContent {
@@ -649,6 +738,7 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow: hidden;
 }
 
 #projectsSection #projectsContent {
@@ -738,16 +828,80 @@ section {
 }
 
 #projectsSection #projectsContent #cards .card .front h3 {
-  height: 30px;
+  height: 40px;
   font-size: 30px;
   color: #0466c8;
 }
 
 #projectsSection #projectsContent #cards .card .back {
-  background-color: whitesmoke;
+  background-color: white;
   color: #001233;
   -webkit-transform: perspective(500px) rotateY(180deg);
           transform: perspective(500px) rotateY(180deg);
+  padding: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#projectsSection #projectsContent #cards .card .back .projectDescription {
+  font-size: 25px;
+  text-align: center;
+}
+
+#projectsSection #projectsContent #cards .card .back .tecnologies {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#projectsSection #projectsContent #cards .card .back .tecnologies li {
+  margin: 5px;
+  -webkit-box-shadow: 0 0 5px black;
+          box-shadow: 0 0 5px black;
+  border-radius: 2px;
+  background-color: white;
+}
+
+#projectsSection #projectsContent #cards .card .back .projectLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#projectsSection #projectsContent #cards .card .back .projectLinks a {
+  font-size: 20px;
+  color: #001233;
+  margin: 3px 5px;
+  padding: 0 10px;
+  text-decoration: none;
+  background-color: #0466c8;
+  border-radius: 13px;
+}
+
+#projectsSection #projectsContent #cards .card .back .projectLinks a:hover {
+  -webkit-box-shadow: 0px 0px 20px #0466c8;
+          box-shadow: 0px 0px 20px #0466c8;
+  -webkit-filter: brightness(120%);
+          filter: brightness(120%);
 }
 
 #projectsSection #projectsContent #cards .card:hover .face.front {
@@ -791,11 +945,11 @@ section {
 #skillsSection #skillsContent .skills {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 125px 125px 125px 150px 125px 125px;
-      grid-template-columns: 125px 125px 125px 150px 125px 125px;
-  -ms-grid-rows: 125px;
-      grid-template-rows: 125px;
-  gap: 20px;
+  -ms-grid-columns: 125px 125px 125px 150px;
+      grid-template-columns: 125px 125px 125px 150px;
+  -ms-grid-rows: 125px 125px;
+      grid-template-rows: 125px 125px;
+  gap: 70px;
 }
 
 #skillsSection #skillsContent h3 {
@@ -881,7 +1035,28 @@ section {
   color: #0466c8;
   -webkit-filter: brightness(110%);
           filter: brightness(110%);
-  margin-bottom: 60px;
+}
+
+#contactSection #contactContent .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 20px;
+}
+
+#contactSection #contactContent .social .socialLink {
+  text-align: center;
+  width: 100px;
 }
 
 #contactSection #contactContent #contactForm {
@@ -961,7 +1136,19 @@ section {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 980px) {
+  #buttons #navBarTop #navBarTopList a {
+    font-size: 25px;
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  #menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   #buttons {
     display: none;
   }
@@ -984,6 +1171,7 @@ section {
     left: unset;
   }
   #intro #presentation #description h1 {
+    text-align: center;
     font-size: 80px;
   }
   #intro #presentation #description h2 {
@@ -1020,10 +1208,11 @@ section {
     height: 400px;
   }
   #skillsSection #skillsContent .skills {
-    -ms-grid-columns: 200px 150px 150px;
-        grid-template-columns: 200px 150px 150px;
-    -ms-grid-rows: 150px 150px;
-        grid-template-rows: 150px 150px;
+    -ms-grid-columns: 150px 150px 150px;
+        grid-template-columns: 150px 150px 150px;
+    -ms-grid-rows: 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px;
+    gap: 40px;
   }
   #skillsSection #skillsContent .interestedIn h3 {
     margin: 5px 0;
@@ -1069,6 +1258,9 @@ section {
         grid-template-columns: repeat(2, 125px);
     -ms-grid-rows: 125px 125px;
         grid-template-rows: 125px 125px;
+  }
+  #projectsSection {
+    overflow: hidden;
   }
   #projectsSection #projectsContent {
     height: unset;
